package core;

/**
 * 
 */
public enum Size 
{
    SMALL,
    MEDIUM,
    LARGE
}
