@startuml basic_cv

title Simple Coffee GUI

package core
{
    abstract class CoffeeBase
    {
        -Size size
        -String description

        #CoffeeBase(desc, size)
        +getDescription()
        +getSize()
        {abstract} +cost()
    }
    
    abstract class CondimentBase
    {
        -CoffeeBase owner

        #CondimentBase(owner, desc, size)
        +getOwner()
    }

    class CoffeeMixer
    {
        -CoffeeBase drink

        +setHouseBlend(size)
        +setDecafCoffee(size)
        +setExpresso(size)
        +setDarkRoast(size)

        +addMilk(size)
        +addMocha(size)
        +addSoy(size)
        +addCaramel(size)
        +addVanilla(size)
        +addWhip(size)

        +prepare()
    }
    
    class DecafCoffee
    {
        +DecafCoffee(size)
        +cost()
    }

    class Expresso
    {
        +Expresso(size)
        +cost()
    }

    class HomeBlend
    {
        +Expresso(size)
        +cost()
    }

    class DarkRoast
    {
        +DarkRoast(size)
        +cost()
    }
    
    class Mocha
    {
        +Mocha(owner)
        +cost()
    }

    class Soy
    {
        +Soy(owner)
        +cost()
    }

    class Milk
    {
        +Milk(owner)
        +cost()
    }

    class Whip
    {
        +Whip(owner)
        +cost()
    }

    class Caramel 
    {
        +Caramel(owner)
        +cost()
    }

    class Vanilla
    {
        +Vanilla(owner)
        +cost()
    }

    enum Size 
    {
        SMALL
        MEDIUM
        LARGE
    }
}

CoffeeBase <|.. DecafCoffee
CoffeeBase <|.. Expresso
CoffeeBase <|.. HomeBlend
CoffeeBase <|.. DarkRoast

CondimentBase <|.. Mocha
CondimentBase <|.. Soy
CondimentBase <|.. Milk
CondimentBase <|.. Whip
CondimentBase <|.. Caramel
CondimentBase <|.. Vanilla

CoffeeBase <|-- CondimentBase
CoffeeBase -> Size

CoffeeMixer *-- CoffeeBase

package client
{
    class CoffeeShopGUI
    {
        +CoffeeShopGUI()
    }

    class ConsoleShop
    {
        -ArrayList<CoffeeBase> baseOptions
        -ArrayList<CoffeeBase> addonOptions
        +ConsoleShop()
        -run()
        -printMenuList(list)
    }
    caption for testing purposes 
}

class App
{
    {static} +main()
}

@enduml